spacing margin issues

--- a/src/app/modules/shared-auth-v1/shared-auth-otp/shared-auth-otp.component.scss
+++ b/src/app/modules/shared-auth-v1/shared-auth-otp/shared-auth-otp.component.scss
@@ -10,7 +10,7 @@
 }
 .login-card {
     background-color: #ffffff;
-    border-radius: 8px;
+    border-radius: 12px;
     padding: 15px;
     margin: 15px;
     h3 {
@@ -72,7 +72,7 @@
         }
     }
     .otp-text {
-        padding: 10px 0px 40px 0px;
+        padding: 20px 0px;
         display: flex;
         align-items: center;
         .otp-text-inner {
@@ -87,7 +87,7 @@
             }
         }
         .right {
-            text-align: center;
+            text-align: right;
             span {
                 font-size: $large-font;
                 font-weight: bold;
