--- a/src/app/modules/shared-auth-v1/shared-login/shared-login.component.scss
+++ b/src/app/modules/shared-auth-v1/shared-login/shared-login.component.scss
@@ -10,7 +10,7 @@
     }
     .skip-btn {
         position: absolute;
-        top: 10%;
+        top: 8%;
         z-index: 99;
         right: 20px;
         font-size: 10px;
@@ -47,7 +47,7 @@
         }
         .login-card {
             background-color: #ffffff;
-            border-radius: 8px;
+            border-radius: 12px;
             padding: 15px;
             margin: 15px;
             h3 {
